# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1-luokkakaavio.md  tehtava2-luokkakaavio.md  tehtava3-sekvenssikaavio.md  tehtava4-sekvenssikaavio.md
src/: index.py
src/entities/: bag.py  item.py  pocket.py
src/tests/: bag_test.py  item_test.py  pocket_test.py
