[tool.poetry]
name = "loadouts"
version = "0.1.0"
description = "Application for managing different loadouts for gear you carry in different situations."
authors = ["Sami Reimavuo <sami@reimavuo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
invoke = "^1.7.3"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pylint = "^2.15.6"
pytest = "^7.2.0"
autopep8 = "^2.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
